Created TankPlayerControl, and TankAIControl c++ classes

--- a/BattleTanks/Config/DefaultEngine.ini
+++ b/BattleTanks/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGrounds.BattleGrounds
-GameDefaultMap=/Game/BattleGrounds.BattleGrounds
+EditorStartupMap=/Game/ALevel/MainMenu.MainMenu
+GameDefaultMap=/Game/ALevel/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BattleTanksGameMode_BP.BattleTanksGameMode_BP_C
 
