Working TankPlayerController_BP

--- a/BattleTanks/Config/DefaultEngine.ini
+++ b/BattleTanks/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ALevel/MainMenu.MainMenu
+EditorStartupMap=/Game/ALevel/BattleGrounds.BattleGrounds
 GameDefaultMap=/Game/ALevel/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BattleTanksGameMode_BP.BattleTanksGameMode_BP_C
 
